# finalwhistle

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  render.yaml
docs/: DEMO_SCRIPT.md  FEEDBACK.md  SUBMISSION.md  TECHNICAL.md
program/: Anchor.toml
program/mock-oracle/: Cargo.toml
program/mock-oracle/src/: lib.rs
program/programs/finalwhistle/: Cargo.toml
program/programs/finalwhistle/src/: lib.rs
scripts/: airdrop-retry.mjs  claim.mjs  deploy-program.sh  find-final-seq.mjs  fund-devnet.mjs  go-live.sh  place-bet.mjs  settle-fixture.mjs  setup-devnet.mjs  smoke-test-settle.mjs  smoke-test.mjs  verify-proof.mjs
scripts/video/: assemble-vo-sync.mjs  assemble-vo.sh  assemble.sh  gen-voiceover-sync.mjs  gen-voiceover.mjs  outro.html  record-demo.mjs  record-live.mjs  record-scene.mjs  replay-with-bets.mjs  title.html
server/: package.json  tsconfig.json
server/src/: api.ts  chain.ts  config.ts  demo.ts  keeper.ts  main.ts  store.ts  txline.ts
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/components/: Layout.tsx  MarketCard.tsx  charts.tsx
web/src/idl/: finalwhistle.json
web/src/lib/: anchor.ts  api.ts  format.ts  types.ts
web/src/pages/: Home.tsx  Match.tsx  Portfolio.tsx  Receipt.tsx
