[package]
name = "finalwhistle"
version = "0.1.0"
description = "Trustless World Cup prediction markets settled by TxLINE Merkle proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "finalwhistle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
